--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </nav>
     <div class="container">
       <h2>👋 Hi I am</h2>
-      <h1>Evgeniya</h1>
+      <h1 class="mb-3">Evgeniya</h1>
       <h3>🇺🇦 Front-end developer, based in Ukraine</h3>
       <div class="navigation-links">
         <a href="about.html#contact" class="contact-link">Contact me</a>
